crates/aura-macros/tests/boundaries/weak_identifier_invalid_domain.rs
#[aura_macros::weak_identifier(domain = "contact")]
struct InvalidDomain;

fn main() {}
